--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "kaiser",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
